--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,8 @@
 *= require aero
 *= require Manage
 *= require Manage-kpi
+*= require Manage-user
+*= require Manage-view
 *= require Entry
 *= require_self
  */
