--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -81,39 +81,50 @@
                               </tr>
                          </thead>
                          <tbody>
-                              <tr>
-                                   <td width="80px"  align="right">Date:</td>
-                                   <td id="chart-detail-date" align="left"></td>
-                              </tr>
-                              <tr class="hide">
-                                   <td width="80px"  align="right">To:</td>
-                                   <td id="chart-detail-end-date" align="left"></td>
-                              </tr>
-                              <tr class="hide">
-                                   <td width="80px"  align="right">Percent:</td>
-                                   <td id="chart-detail-percent" align="left"></td>
-                              </tr>
-                              <tr>
-                                   <td width="80px"  align="right">Target:</td>
-                                   <td id="chart-detail-target" align="left"></td>
-                              </tr>
-                              <tr class="hide">
-                                   <td width="80px"  align="right">Aver Target:</td>
-                                   <td id="chart-detail-aver-target" align="left"></td>
-                              </tr>
-                              <tr>
-                                   <td width="80px"  align="right">Value:</td>
-                                   <td id="chart-detail-value" align="left"></td>
-                              </tr>
-
-                              <tr class="hide">
-                                   <td width="80px"  align="right">Aver Value</td>
-                                   <td id="chart-detail-aver-date" align="left"></td>
-                              </tr>
-                              <tr>
-                                   <td width="80px"  align="right">TCR:</td>
-                                   <td id="chart-detail-tcr" align="left"></td>
-                              </tr>
+                             <tr>
+                                <td width="80px"  align="right">Date:</td>
+                                <td id="date" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">From:</td>
+                                 <td id="from" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">To:</td>
+                                 <td id="to" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Percent:</td>
+                                 <td id="percent" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Sum Target:</td>
+                                 <td id="sum-target" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Sum Value:</td>
+                                 <td id="sum-value" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Target:</td>
+                                 <td id="target" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Value:</td>
+                                 <td id="value" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Aver Target:</td>
+                                 <td id="aver-target" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">Aver Value:</td>
+                                 <td id="aver-value" align="left"></td>
+                             </tr>
+                             <tr>
+                                 <td width="80px"  align="right">TCR:</td>
+                                 <td id="tcr" align="left"></td>
+                             </tr>
                          </tbody>
                     </table>
                     <div class="chart-detail-close" id="chart-detail-close" onclick="close_chart_detail()">
