--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,34 +1,30 @@
-    <div class="page-navi login-pageNavi relative">
-
-        <a class="btn btn-wzx btn-primary" href='/user_sessions/new'>Login</a>
-    </div>
-    
+<div class="page-navi login-pageNavi relative">
+     <a class="btn btn-wzx btn-primary" href='/user_sessions/new'><%= t 'auth.view.login_title'%></a>
+</div>
 <% if @user && @user.errors.any? %>
-    <div id="error_explanation" class="error_explanation ">
-      <h6>Oops..something wrong with your input</h6>
-      <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+<div id="error_explanation" class="error_explanation ">
+     <ul>
+          <% @user.errors.full_messages.each do |msg| %>
+          <li>
+               <%= msg %>
+          </li>
+          <% end %>
+     </ul>
+</div>
 <% end %>
 <%= form_tag({:action=>'create'},{:class=>'login-form'})  do %>
 
+<label for="email"><%= t 'auth.view.email'%></label>
+<%= text_field_tag(:email) %>
 
+<label for="password"><%= t 'auth.view.pwd'%></label>
+<%= password_field_tag(:password ) %>
 
-    <%= label_tag(:email, "Email:") %>
-    <%= text_field_tag(:email) %>
+<label for="password_confirmation"><%= t 'auth.view.con_pwd'%></label>
+<%= password_field_tag(:password_confirmation) %>
 
-    <%= label_tag(:password, "Password:") %>
-    <%= password_field_tag(:password ) %>
+<label for="company_name"><%= t 'auth.view.company'%></label>
+<%= text_field_tag(:company_name) %>
 
-    <%= label_tag(:password_confirmation, "Confirm Password:") %>
-    <%= password_field_tag(:password_confirmation) %>
-
-    <%= label_tag(:company_name, "Company Name:") %>
-    <%= text_field_tag(:company_name) %>
-
-
-    <%= submit_tag("submit",{:class=>"btn btn-wzx btn-success pull-right"}) %>
+<input type="submit" class="btn btn-wzx btn-success pull-right" value="<%= t 'auth.view.submit_btn'%>"/>
 <% end %>
