--- a/app/assets/stylesheets/Manage-view.css
+++ b/app/assets/stylesheets/Manage-view.css
@@ -56,3 +56,11 @@
     display:block;
     color:rgba(0,0,0,0.7)
 }
+/*********************************************************************************************************  添加部分
+*******************************************************************************************************************/
+.manage-user-add[special="entity"]{
+    background-color:#333
+}
+.manage-user-add[special="entity"]>i{
+    color:white;
+}
