--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,4 +15,8 @@
           <%= render :partial=>'shares/message_box'%>
            <%= render :partial=>'shares/slide_box'%>
      </body>
+     <script type="text/javascript">
+           I18n.defaultLocale = "<%= I18n.default_locale %>";
+           I18n.locale = "<%= I18n.locale %>";
+     </script>
 </html>
