--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -6,36 +6,36 @@
      <nav class="pull-left">
           <ul>
                <li>
-                    <a href="/"> <span><%= t 'view.menu.start'%></span> <span class="nav-get-started"></span> </a>
+                    <a href="/"> <span><%= t 'menu.start'%></span> <span class="nav-get-started"></span> </a>
                </li>
                <li>
-                    <a  href="<%= dashboards_path%>"> <span><%= t 'view.menu.dashboard'%></span> <span class="nav-dash-board"></span> </a>
+                    <a  href="<%= dashboards_path%>"> <span><%= t 'menu.dashboard'%></span> <span class="nav-dash-board"></span> </a>
                </li>
                <li>
-                    <a   href="<%= analyse_kpi_entries_path%>"> <span><%= t 'view.menu.analytics'%></span> <span class="nav-analytics"></span> </a>
+                    <a   href="<%= analyse_kpi_entries_path%>"> <span><%= t 'menu.analytics'%></span> <span class="nav-analytics"></span> </a>
                </li>
                <li>
-                    <a> <span><%= t 'view.menu.reports'%></span> <span class='nav-report'></span> </a>
+                    <a> <span><%= t 'menu.reports'%></span> <span class='nav-report'></span> </a>
                </li>
                <li class="relative">
-                    <a> <span><%= t 'view.menu.manage'%></span> <span class='nav-manage'></span> </a>
+                    <a> <span><%= t 'menu.manage'%></span> <span class='nav-manage'></span> </a>
                     <ul class="nav-manage-sub">
                          <li>
-                              <a href="<%= kpis_path%>"><%= t 'view.menu.kpi'%></a>
+                              <a href="<%= kpis_path%>"><%= t 'menu.kpi'%></a>
                          </li>
                          <li>
-                              <a  href="<%= users_path%>"><%= t 'view.menu.user'%></a>
+                              <a  href="<%= users_path%>"><%= t 'menu.user'%></a>
                          </li>
                          <li>
-                              <a  href="<%= entity_groups_path%>"><%= t 'view.menu.view'%></a>
+                              <a  href="<%= entity_groups_path%>"><%= t 'menu.view'%></a>
                          </li>
                          <li>
-                              <a><%= t 'view.menu.billing'%></a>
+                              <a><%= t 'menu.billing'%></a>
                          </li>
                     </ul>
                </li>
                <li>
-                    <a href="<%= new_kpi_entry_path%>"> <span><%= t 'view.menu.entry_kpi'%></span> <span class="nav-entry-kpi"></span> </a>
+                    <a href="<%= new_kpi_entry_path%>"> <span><%= t 'menu.entry_kpi'%></span> <span class="nav-entry-kpi"></span> </a>
                </li>
           </ul>
      </nav>
