--- a/app/views/kpi_categories/_left_menu.html.erb
+++ b/app/views/kpi_categories/_left_menu.html.erb
@@ -1,9 +1,9 @@
 <ul class="manage-left-menu" id="manage-left-menu" type="category">
-       <li>Manage KPI</li>
+       <li><%= t 'manage.kpi.title'%></li>
        <li id="manage-menu-add">
            <input type="text" />
-           <span><i class="icon-plus"></i> Category</span>
-           <p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>
+           <span><i class="icon-plus"></i> <%= t 'manage.kpi.category'%></span>
+           <p class="manage-add-tooltip"><%= t 'manage.base.enter_confirm'%><br /><%= t 'manage.base.esc_cancel'%></p>
        </li>
 
        <%@categories.each do |category|%>
