--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -4,20 +4,20 @@
 
      <div class="manage-btn-group" id="manage-btn-group">
           <a class="btn btn-primary" id="kpi-add-show"><i class="icon-plus"></i> KPI</a>
-          <a class="btn btn-primary kpi-library-btn" id="kpi-library-btn"><i class="icon-th-list"></i> KPI Library</a>
+          <a class="btn btn-primary kpi-library-btn" id="kpi-library-btn"><i class="icon-th-list"></i><%= t 'manage.kpi.kpi_library'%></a>
           <p id="manage-edit-target" >
 
           </p>
           <i class="icon-pencil"></i>
           <input type="text"/>
-          <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
+          <span><%= t 'manage.base.enter_confirm'%>&nbsp;&nbsp;&nbsp;&nbsp;<%= t 'manage.base.esc_cancel'%></span>
      </div>
 
      <div class="manage-right-list">
           <div class="right-list-top-control" id="right-list-top-control">
                <input type="checkbox" id="manage-total-check"/>
-               <a class="btn" id="manage-item-remove">Delete</a>
-               <a class="btn" id="manage-item-edit">Edit</a>
+               <a class="btn" id="manage-item-remove"><%= t 'manage.base.delete_btn'%></a>
+               <a class="btn" id="manage-item-edit"><%= t 'manage.base.edit_btn'%></a>
           </div>
 
           <ul id="manage-sort-list" class="manage-sort-list">
@@ -32,21 +32,22 @@
                               <td title='<%= kpi.name%>'><%= kpi.name%></td>
                               <td ><%= KpiFrequency.get_desc_by_value(kpi.frequency)%></td>
                               <td ><%= KpiDirection.get_desc_by_value(kpi.direction)%></td>
-                              <td class="manage-kpi-target" title='<%= KpiUnit.parse_entry_value(kpi.unit, kpi.target)%>+<%= KpiUnit.get_entry_unit_sym(kpi.unit)%>'><span class="can-change"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.target)%></span><span><%= KpiUnit.get_entry_unit_sym(kpi.unit)%></span>
+                              <td class="manage-kpi-target">
+                                   <span class="can-change"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.target)%></span><span><%= KpiUnit.get_entry_unit_sym(kpi.unit)%></span>
                               <input type='text' effect_on="<%= kpi.id%>"/>
                               </td>
                               <%if kpi.is_calculated%>
                               <td title="<%= kpi.formula_string%>"><%= kpi.formula_string%></td>
                               <%else%>
-                              <td>No</td>
+                              <td><%= t 'manage.kpi.not_calculate_type'%></td>
                               <%end%>
                          </tr>
                          <tr>
                               <td title='<%= kpi.description%>'><%= kpi.description%></td>
-                              <td>Frequency</td>
-                              <td>Trend</td>
-                              <td>Target</td>
-                              <td>Is Calcu Type</td>
+                              <td><%= t 'manage.kpi.frequency'%></td>
+                              <td><%= t 'manage.kpi.trend'%></td>
+                              <td><%= t 'manage.kpi.target'%></td>
+                              <td><%= t 'manage.kpi.calculate_type'%></td>
                          </tr>
                     </table>
                </li>
@@ -67,8 +68,8 @@
 
                     </ul>
                     <div>
-                         <a class="btn" id="library-cancel">Cancel</a>
-                         <a class="btn btn-primary" id="library-add">Add</a>
+                         <a class="btn" id="library-cancel"><%= t 'manage.base.cancel_btn'%></a>
+                         <a class="btn btn-primary" id="library-add"><%= t 'manage.base.add_btn'%></a>
                     </div>
                </div>
           </div>
