--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -6,6 +6,9 @@
 .normal-gray{
     color:#777;
 }
+.blue-green{
+    color:#55c8b4;
+}
 .bold{
     font-weight:bold
 }
@@ -202,6 +205,9 @@ label,p,h1,h2,h3,h4,h5{
     display:none;
     word-break:break-all;
     word-wrap:break-word;
+    box-shadow:0 0 5px rgba(0,0,0,0.5);
+    -moz-shadow:0 0 5px rgba(0,0,0,0.5);
+    -webkit-shadow:0 0 5px rgba(0,0,0,0.5);
 }
 .message-box p{
     font-size:16px;
