--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -95,7 +95,7 @@
         <div class="assign-kpi-top">
             <a class="btn" id="assign-kpi-cancel">Cancel</a>
             <a class="btn btn-primary" id="assign-kpi-ok">OK</a>
-            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> Pick KPI</a>
+            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> All KPIs</a>
             <p><span class="normal-blue"></span><span>'s KPI</span></p>
         </div>
         <div class="assign-kpi-inner" id="assign-kpi-inner">
