--- a/app/views/kpis/_user_kpi.html.erb
+++ b/app/views/kpis/_user_kpi.html.erb
@@ -1,11 +1,18 @@
 <ul class="left">
      <%@user_kpis.each_with_index do |kpi,i|%>
      <li id="<%= kpi.user_kpi_item_id%>">
-          <h3><%= kpi.name%></h3>
-          <p title="<%= kpi.description%>">
-               <%= kpi.description%>
-          </p>
+          <table>
+              <tr>
+                  <td title="<%= kpi.name%>"><%= kpi.name%></td>
+                  <td><input type="text" value="<%= kpi.target%>"/></td>
+              </tr>
+              <tr>
+                  <td title="<%= kpi.description%>"><%= kpi.description%></td>
+                  <td>Target</td>
+              </tr>
+          </table>
           <i class="icon-trash"></i>
      </li>
      <%end%>
 </ul>
+
