--- a/app/views/layouts/non_authorized.html.erb
+++ b/app/views/layouts/non_authorized.html.erb
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>IFEpm</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+     <head>
+          <title>IFEpm</title>
+          <%= stylesheet_link_tag    "application", :media => "all" %>
+          <%= javascript_include_tag "application" %>
+          <%= csrf_meta_tags %>
+     </head>
+     <body>
+          <article class="wrap-main">
+               <div class="log-general">
+                    <header>
+                         <div class="log-header-image">
+                              <div class="log-logo"></div>
+                              <a href="<%= @href%>"><%= @title %></a>
+                              <div class="language-select">
+                                   <select class="chosen-select">
+                                        <option>English</option>
+                                        <option>中文</option>
+                                   </select>
+                              </div>
+                         </div>
+                    </header>
+                    <div class="log-body">
+                         <div class="log-btn-group"> 
+                              <%= yield %>
+                         </div>
+                    </div>
+               </div>
+          </article>
 
+          <%= render :partial=>'shares/message_box'%>
 
-<div class="wrap-page">
-  <div class="page-top">
-    <img src="/assets/headicon.png"/>
-    <label class="company-name">BrillianTech</label>
-  </div>
-  <div class="page-navi clearfix">
-    <h3 class="text-center"><%= @title %></h3>
-  </div>
-  <% if flash[:notice]!=nil || flash[:alert]!=nil %>
-      <div class="alert <%=flash[:notice]==nil ? '':'alert-success' %>">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash[:notice]||flash[:alert] %>
-      </div>
-  <% end %>
-
-
-  <div class="login-sub-middle clearfix">
-    <%= yield %>
-  </div>
-</div>
-
-
-
-<%= render :partial=>'shares/message_box'%>
-
-</body>
- <script type="text/javascript">
-           I18n.defaultLocale = "<%= I18n.default_locale %>";
-           I18n.locale = "<%= I18n.locale %>";
-  </script>
+     </body>
+     <script type="text/javascript">
+               I18n.defaultLocale = "<%= I18n.default_locale %>";
+               I18n.locale = "<%= I18n.locale %>";
+     </script>
 </html>
-
 
