--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,6 +1,3 @@
-<div class="page-navi login-pageNavi relative">
-     <a class="btn btn-wzx btn-primary" href='/user_sessions/new'><%= t 'auth.view.login_title'%></a>
-</div>
 <% if @user && @user.errors.any? %>
 <div id="error_explanation" class="error_explanation ">
      <ul>
@@ -12,19 +9,22 @@
      </ul>
 </div>
 <% end %>
-<%= form_tag({:action=>'create'},{:class=>'login-form'})  do %>
-
-<label for="email"><%= t 'auth.view.email'%></label>
-<%= text_field_tag(:email) %>
-
-<label for="password"><%= t 'auth.view.pwd'%></label>
-<%= password_field_tag(:password ) %>
-
-<label for="password_confirmation"><%= t 'auth.view.con_pwd'%></label>
-<%= password_field_tag(:password_confirmation) %>
-
-<label for="company_name"><%= t 'auth.view.company'%></label>
-<%= text_field_tag(:company_name) %>
-
-<input type="submit" class="btn btn-wzx btn-success pull-right" value="<%= t 'auth.view.submit_btn'%>"/>
-<% end %>
+<form action="/subscriptions" method="post">
+     <div class="log-input">
+          <span><i class="icon-envelope"></i></span>
+          <input type="text" id="email" name="email"  placeholder="<%= t 'auth.view.email'%>"/>
+     </div>
+     <div class="log-input">
+          <span><i class="icon-lock"></i></span>
+          <input id="password" name="password" type="password"   placeholder="<%= t 'auth.view.pwd'%>"/>
+     </div>
+     <div class="log-input">
+          <span><i class="icon-lock"></i></span>
+          <input  id="password_confirmation" name="password_confirmation" type="password" placeholder="<%= t 'auth.view.con_pwd'%>"/>
+     </div>
+     <div class="log-input">
+          <span><i class="icon-home"></i></span>
+          <input id="company_name" name="company_name" type="text"  placeholder="<%= t 'auth.view.company'%>"/>
+     </div>
+</form>
+<a class="login-out-btn" onclick="document.forms[0].submit();"></a>
